--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mssql-jdbc-6.2.2.jre8.jar=lib\\nblibraries.properties\\nblibraries.properties\\mssql-jdbc-6.2.2.jre8.jar
+file.reference.sqljdbc42.jar=lib/nblibraries.properties/nblibraries.properties/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +45,7 @@ jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.javaee-endorsed-api-7.0.classpath}:\
-    ${file.reference.mssql-jdbc-6.2.2.jre8.jar}
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
